fix orange separater spacing on featured home post

--- a/src/scss/components/_latest_posts.scss
+++ b/src/scss/components/_latest_posts.scss
@@ -447,15 +447,19 @@ ul.chancellorFeaturePost {
       height: 2px;
       // border: 2px solid $utorange;
       width: 16%;
-      width: 5%;
+      width: 8%;
       margin: 0 80%;
       margin: 10px;
       background: $utorange;
-      position: relative;
+      position: absolute;
       left: 42%;
-      // margin: 3rem 0 2rem 0;
+      margin: 3rem 0 2rem 0;
     }
-
+    &:last-child {
+      &:after {
+        content: none;
+      }
+    }
     // &:before {
     //   content: 'READ MORE';
     //   font-size: var(--wp--custom--typography--tiny);
@@ -647,7 +651,7 @@ ul.chancellorThoughtPost {
         margin: 0 40%;
         margin: 10px;
         background: $utorange;
-        position: relative;
+        position: absolute;
         left: 42%;
         margin: 3rem 0 2rem 0;
       }
